Fixe bottom padding on mobile

--- a/resources/sass/site/_info-page.scss
+++ b/resources/sass/site/_info-page.scss
@@ -452,7 +452,7 @@
   .container.info-page {
 
     padding-top: 40px;
-    padding-bottom: 30px;
+    padding-bottom: 100px;
     padding-right: 0;
     padding-left: 0;
 
@@ -509,6 +509,10 @@
         margin-bottom: 0;
         margin-top: 0;
       }
+    }
+
+    .text-row:nth-child(2) {
+      flex-direction: column-reverse;
     }
 
     .text-row:last-child {
